# clintacts

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  compile_commands.json  shell.nix
cmake/: FindGcov.cmake  FindSphinx.cmake  Findcodecov.cmake
docs/: CMakeLists.txt  Doxyfile.in  Doxyfile.in(1)
etc/: Doxyfile.in  standardese
include/clintacts/: contact.h  contacts.h
source/: contacts.cpp  main.cpp
source/clintacts/: contact.cpp  contacts.cpp
src/: CMakeLists.txt  main.cpp
src/help/: commands.cpp  commands.h  contacts.txt  crypt.cpp  crypt.h  helpers.cpp  helpers.h  main.cpp
src/inc/: Log.cpp  Log.h  args.hpp  contacts.cpp  contacts.h  crypt.hpp  player.cpp  player.h
src/inc/utl/: utils.hpp
test/: CMakeLists.txt  test_main.cpp  test_one.cpp  test_two.cpp
thrd/: CMakeLists.txt
utils/: doctest.hpp  utils.hpp
